2008-03-16  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py (ListView._wrap_exported_rows): Wrap the rows
	into a grid if multiple columns are specified.

	* pytis/presentation/spec.py (ListLayout): New argument `columns'.

2008-03-14  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py (LayoutForm._export_packed_field): Avoid
	aligning codebook fields as numeric.

2008-03-07  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/application.py (recent_forms_menu): Check if
	application is not None.

	* pytis/web/form.py (EditForm._export_field): Export enumerator
	option values to fix support for Date/Time types in enumerations.
	(EditForm): Validation error display improved.

2008-03-03  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py (LayoutForm._export_fields): Avoid unnecessary
	packing of a single compact field.
	(_SubmittableForm.__init__): Supply the default submit label even
	of None is passed to `submit'.

2008-03-01  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py: Textarea display improvements.

	* pytis/web/field.py: Textarea display improvements.

2008-02-29  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py: Hacks for fixing form display in MSIE.

2008-02-28  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py (ShowForm): Allow numeric fields anignment.

	* pytis/form/screen.py: Added support for menu autoindex
	keyboard access.

	* pytis/form/commands_.py: Cosmetic changes.

	* pytis/form/application.py: Added support for menu autoindex
	keyboard access.

2008-02-22  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py: Always take a `PresentedRow' instance as a
	constructor argument.

2008-02-20  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py (EditForm._export_field): Set the `fullsize'
	style when width is None for textarea.

2008-02-20  Pavel Hanak  <hanak@asellus.cz>

	* pytis/output/formatter.py (LoutFormatter._format_text): Try to
	solve the problem with ' & ' at the end of wrapped elements such